# ChangeLog for dev-libs/geoip
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.169 2013/03/15 13:25:20 ago Exp $

  15 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for sh, wrt bug #461094

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for s390, wrt bug #461094

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for sparc, wrt bug #461094

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for ia64, wrt bug #461094

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for arm, wrt bug #461094

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for alpha, wrt bug #461094

  13 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for ppc64, wrt bug #461094

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for ppc, wrt bug #461094

  10 Mar 2013; Jeroen Roovers <jer@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for HPPA (bug #461094).

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for x86, wrt bug #461094

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
  Stable for amd64, wrt bug #461094

*geoip-1.5.0 (09 Mar 2013)

  09 Mar 2013; Jeroen Roovers <jer@gentoo.org> -geoip-1.4.8-r1.ebuild,
  +geoip-1.5.0.ebuild:
  Version bump.

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r2.ebuild:
  Stable for sh, wrt bug #453404

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r2.ebuild:
  Stable for s390, wrt bug #453404

  18 Feb 2013; Alexis Ballier <aballier@gentoo.org> geoip-1.4.8-r3.ebuild:
  keyword ~amd64-fbsd

  06 Feb 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r2.ebuild:
  Stable for sparc, wrt bug #453404
