@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX geoipupdate-r1.sh 746 SHA256 fec9ee8ee72c3d8479c0281005543e69b46993a268657c86f271892da0457cfe SHA512 53e88072a7321d969aeb757e83ce996182e58501d6fa3089ef08695d4fd9d43efd5955ef800215fc2e96529b35d66ed82413e70f11bd5e497b6043ad1646e090 WHIRLPOOL b6df41f0ebab45258c6b50fa0ed25588636514e6dcdeb367260519a3703b72ebcdfb9c69dcdb084dc68f49544e3b38bebeeeb007d91ebe49f79ec5d5436b8718
 AUX geoipupdate-r2.sh 845 SHA256 f5a8d5fab597bc4f502916bdff0c945789174b795a07290b176907e56bc53eb7 SHA512 02306fc3f1ab60271dad14a2fee02b00f774a70d41c217cddfb2f8e70fef967bf2a6c508c4655595300fa3738146b2f98c75ce26491d71cf70b8681d28ac4d8d WHIRLPOOL 3298d7cfa3ffa03ea136a340aa95644e16afbf70d140cc85e2a6d5b84091b36bb0c40bf3fa99fa81967f416a18bbedbf5481b387d39b94d586833f186ab882aa
@@ -9,25 +9,14 @@ DIST GeoIPASNum.dat.gz 1813588 SHA256 be73dd4dc23b9a6ca7f6fc190821768ff49b396f17
 DIST GeoIPv6.dat.gz 609340 SHA256 6a4dc4b648578ebb5a8b0ca1a2adc8db6297484caa7c87158116dbb4af328c50 SHA512 9e995c9ab8bbfc2ea5598b66c75340d1d5ca4ca34d70b43d4a79464e738a97c08fe079f4c2b9d1c33bb128e42ffe95d1dcd9e8bdfa97c65520bffd698e1b3a14 WHIRLPOOL 2ec1dd94c933588af77592b2ab80ba9ae5042f70d54e4e578815d8b1409f2233664a1b63abcf3bbaf54b3cfba3c67de358345eb4dd8af2a1c981c1f00f982d3c
 DIST GeoLiteCity.dat.gz 12094575 SHA256 2db87dd2ed665833b71b5f330476ad850cf3b34001f101d581c8e470dba50a5f SHA512 ff598ab09dede9ffea5edfb70ec1c58c0e612b3b30f3a0cbc69afe445e9b78ac428d2d757d11c575a2f497e239ac12d07ddc49435e37d5295af2e97e951fb2fb WHIRLPOOL 644e73a6392a7cd7e0a5d70986fe5c38c3a3035b5a4304a54ddd8df2047a0ba4b3ec0389dbfc637a3396d4627e22d05d2ee3eeb95094f7be147ad27939f1dd49
 DIST GeoLiteCityv6.dat.gz 12259422 SHA256 875847daefc12ac35eea84ae05b8ac71cdaf809753ab6c69d8f01962ea15b550 SHA512 84805f923067b5457f3207373c8325d2074374d4f0202b6b08001c5b67af5ef1eb6786a135f155e67230586ea3d358a4900388cd5fa4dc54bad9a6ec72e56bfe WHIRLPOOL 9e3e5470d0ee1b10c85df03fdff0f2dd57e2a150ab618c60fc03d9c5605fa39ef1efbaadf1d510c7367c1b8a94fcc29142af656441f2b16f27db023e51f325e5
-EBUILD geoip-1.4.8-r2.ebuild 1947 SHA256 2185beef9ed787a1de4a5f3958ca247481432e54049d0e90bdfbb810e8a70839 SHA512 2bafa2ba6fcee6e09bbcba914282bddb0fcdc1fd095082899117681bded81b9ede12666d7766a1103260d090529740fd17c9b7e486c24d25b9d1ae74397888d4 WHIRLPOOL 2f955c878827bca7789c64b6a748d950cf7501abb1ec178d59dc8b6700fce692448673a6556ec61d0690e52c598b04c7a90059459da64ac5b4ac9bc93ad5b583
 EBUILD geoip-1.4.8-r3.ebuild 2038 SHA256 5a7afca15340614a73953d86ae42cdb5aa5fa45b29e62589690da648ba46c585 SHA512 85e8225a91fb7c20562ce8bf30600003feef774e73f4ad057694fc64025f307e927d73dac6ca4d1ed0a78627f8af50a17fc2284b5fe36da7cd7d2772912fccd4 WHIRLPOOL 30ec54e4abc9e5efda1bf8ea138a0b3ba9053c331fb33b1f94af97caca700d313df17b1abe028cb63b72ec7910f6fd5ddfa75fa693d66677a2d34ca7ee657888
 EBUILD geoip-1.5.0.ebuild 2013 SHA256 bff944809aa5f3274f9ab724f6ec779ccd494bd297b6886165eab10cb956b169 SHA512 946c1dbcb0518418ac568c71b07c1a81d0dc59c72a75aaf53ef8de48354bb3dea7ca993bf7f1bb2069af67eb6cbd154a9bfdb8b527ac4beed361e66132c46ce7 WHIRLPOOL 31b4222703b9169e8e01d02927cdd437ac9e1b9c513b00dde218c725fb8b95b58ea4e28e85e522cf26112bd36cac9b30fc6cd4f1f6d54d2d984dbbb427555812
-MISC ChangeLog 20620 SHA256 f31e7cbbea1a4e6431b2b42096eaa40cf597895608ce58a9bb3e1092c0253756 SHA512 e74325406a4524654b9f62e16c3b27c0d7392aa69a6da4d97795085cbefd79ceb15e4add67f225c4c58df8654d76cd87e2190d0b74f98465b5df954cec988b83 WHIRLPOOL b7e18f0df948498d00ca0637652f35f42dace99e0456d10c5fc6962ee5f90cd1640310767ea886ea12a61dde4901f56c2d97cb5c4f5f57279b3784579da4828c
+MISC ChangeLog 20699 SHA256 8ffff73ae976cb334befa90f309854244622fb804860cf8c363bc00cc92e3d0c SHA512 f070d128a47d2e6798e7afc3d931a708525a1fb9195111e4171d9cc3aab677c70caf670c2a5faafde8d5adf3b0eaa7bde7d49144466de0c123544339e4027989 WHIRLPOOL 8d06b9f4e9b5af05d7891b6eabdb066770984ed585050d671ddb779d6d85704e5cfa97899dc2776e03f3db42e039586bd00cc4df9d79c7849886420ca6bc855a
 MISC metadata.xml 414 SHA256 1280aa10349cf419f09b873a052d4772b95daf2543c21a29a2d47b327935a551 SHA512 076663380d999ca1bb8c6570b674e150acf39d0b095fabea2a43f1ef1b32c406205eb0c49600fc92791f87d8b8c65fb39e8bd4b76b006a5b7bcef150411bf200 WHIRLPOOL e174135cc0c291d5c38a94f285f1830686d44c380a7d63e6f0b980151bafd91ad952bc44146ae43dbd6e30f967d50c35c49319ec568490eb177ecb0ef8c21bbd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRQyCyAAoJELp701BxlEWfnW4QAI5RsiiFoUi1N0gQVhNTQoms
-8Acewb0bzwjMOtyLk6rolKXCr5uj6F79cGyy/YfP7YzhjEZcaNuaqNrSepxnq8Np
-6nCd2ef/FWCXY0JLTaIIpmXCvWh0nNt25TsO/g4/Jvz5oHHMQGmif+OAfmHwwyNO
-txLx2xBV5+0ACnQ4hJ08Emb1JsKXjnA3LX4Uwzca9xd+qIWJfU+1AGyE/HaSk3SH
-6k+y1TSwY359wb6z6rNyHpirRctt4xTsfFAlWmQgw5mzu+C2dhwZ2R0BTxyDo72R
-K520OA+AO4KgQizCQjqY+dG20l1IOaypzygQvag1FMhpEkY37zREkskTl6olAy2B
-SF0cMjezaZzbzqte9Ya3/nm8xcl0MmN/Ovh7GXwuVtAZY50+FjSp1+okNHQWaLPp
-bcTTQHDnxXw5r9++qFPUgIWft2ZVEQDKrjuIuTy7nFfsvMtpnHUwKsk+8r8yiCa4
-NDJWqSyfJQSSIbyTjE3TFKVdQZZpratom93qN2wWeIOJqV/883ewkrjfaRvEb74I
-OnDoThZF9Dl3MvDlZDoKohmpPlv6eZWDrb2VacHEuvQ+CzGfkHVx3v50TwyPP7kz
-BfOtYj6nC2yzeKbkhWQbWVeY9rffC8lRjII9xl70x5d3mweANc0hbMKG2/tLuqmW
-G2lLeq7s/jmunb5HInBS
-=5Hr6
+iEYEAREIAAYFAlFDUJQACgkQVWmRsqeSphM7JACffM36Gn0gm6kr3f4/6Uj+MfCE
+ypsAn1bqWRoeXeiyDkd9wR17XyFqzER8
+=VKwc
 -----END PGP SIGNATURE-----
