@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=sys-libs/zlib || ( >=sys-devel/automake-1.11.1:1.11 >=sys-devel/automake-1.12:1.12 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
-DESCRIPTION=easily lookup countries by IP addresses, even when Reverse DNS entries don't exist
-EAPI=4
-HOMEPAGE=http://www.maxmind.com/app/ip-location
-IUSE=ipv6 perl-geoipupdate static-libs
-KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos
-LICENSE=LGPL-2.1 GPL-2 MaxMind2
-RDEPEND=sys-libs/zlib perl-geoipupdate? ( dev-perl/PerlIO-gzip dev-perl/libwww-perl )
-SLOT=0
-SRC_URI=http://www.maxmind.com/download/geoip/api/c/GeoIP-1.4.8.tar.gz http://geolite.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz ipv6? ( http://geolite.maxmind.com/download/geoip/database/GeoIPv6.dat.gz http://geolite.maxmind.com/download/geoip/database/GeoLiteCityv6-beta/GeoLiteCityv6.dat.gz )
-_eclasses_=autotools	cf83655b19ed98f9ea3b44f4572b51a3	libtool	2b273eea1976cfaed3449345d94331ac	multilib	ded93e450747134a079e647d888aa80b	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e
-_md5_=ee275a3e5a380414f0c92b49cd0d1709
