@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install preinst setup
+DEPEND=dev-lang/erlang app-arch/zip app-arch/unzip app-text/docbook-xml-dtd:4.5 app-text/xmlto dev-libs/libxslt dev-python/simplejson =dev-lang/python-2*
+DESCRIPTION=RabbitMQ is a high-performance AMQP-compliant message broker written in Erlang.
+EAPI=5
+HOMEPAGE=http://www.rabbitmq.com/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2 MPL-1.1
+RDEPEND=dev-lang/erlang =dev-lang/python-2*
+SLOT=0
+SRC_URI=http://www.rabbitmq.com/releases/rabbitmq-server/v3.0.4/rabbitmq-server-3.0.4.tar.gz
+_eclasses_=eutils	50d18ebffcbd8bd63614b89c2d664d0d	multilib	ded93e450747134a079e647d888aa80b	python	dd56675d8e9f7e85d815a28c87383141	systemd	28706ddc21464b4ed255eee9fc70b516	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=c8dee0140306183b83160eadc0ac6152
