@@ -10,18 +10,20 @@ DIST rabbitmq-server-2.8.6.tar.gz 2788855 SHA256 146a24f2c336d304c465ac4243539b2
 DIST rabbitmq-server-2.8.7.tar.gz 2792978 SHA256 0726e126896abbe30d9fd491d13eb16afa15327a548a3de9c3a31d41adcaccfc SHA512 89c39e8b7062adf716eec5195db5eb359418e50b9294d525dd0a6c045987799ef6493560bfafbccb3e25321808385b07988bc7723c462d3b4ee2a59b421f5a3d WHIRLPOOL 3e89e1345aea46de4540b26d45b8c4734f17a9822eea4794b04d8b7cd145c33c4f0768f11941b2ccae1e1abdf3d6a60bc80f770767bfbd1194f7dccbd11f315a
 DIST rabbitmq-server-3.0.1.tar.gz 3298255 SHA256 6cd27c374e216e2a789dcc6ed6d1414217a554df2f1023cf636785e7346a3b88 SHA512 57d6b3e83a34722f705636af7155e02e1bc8559e1bff374806abc5ac130d3fac7c3bd7a71bf7b237f6befd5143112ef1b51d0cff2d849f390e945606f84c22c6 WHIRLPOOL bdf9aefd5433430206d962086a550767c9ee7aba4f057e449cafa9fa068d1b6c5984757ceab453c170c1cc2d8fc0590c60e91288b2fcde285c5bdda37af1f081
 DIST rabbitmq-server-3.0.2.tar.gz 3314346 SHA256 3d654b0d6fd8c95b37bcc32578b4af9198aa6fd53305316846e6c85b25da98f5 SHA512 8a4012e1f21fa8961e306e5daec9e85caa47ee6142475b34968ee90f33152ae6077919feea68e5031edc9e6ef8a41f2c80f0a819fc2eee4a3a26da11565d8da5 WHIRLPOOL 6be132db4f38e8f1e305a3e83d72c1042d45a3bc441e2945d05d671baf1714dc3289ac51088dd0ddf77ece0fbc8bbfa8ec686c6ea3a2ffb214208f6b3e620732
+DIST rabbitmq-server-3.0.4.tar.gz 3314866 SHA256 e49dbcfd8b2085133847de33081e2defb1f4879d21a9776d54ab1f1988e0e163 SHA512 7a44ea24f64c9adf0d19f787f071c9fc9be6cb0a47f7487e26eb6c526e0c35529d0a0a4d8c7ddcd11de4141808e60aa8cc89b4ad4f7b1c2dd5601f78fa49692f WHIRLPOOL af79667c48cb411b66e404ad21942f3ec4098f0f0e42b7360d830ec9ea88d5a1359d4a2ce74af2e45fbbbad5507b827170d17928b40c24a3e346e734f6337228
 EBUILD rabbitmq-server-2.8.4.ebuild 2452 SHA256 07a5097756d63be3d55fd101a98dac8455bd562ea8cdabd660b204ea33333b65 SHA512 760844716fb21452258a79b5720f39e68b83efaba2eef0a6c84415341ae8e704db19faf7bf0cb14b9a14688bf5ae3b793bcdee29c49ab103c2350ea046fa6ba3 WHIRLPOOL 0a55264aea26b1ce2594cd152b0497dcffb72536a0e6e71c6de680c1bff62862544d9c23f318033133f05dd827cc5445021213dde843dc47960b5fc71ac8a62a
 EBUILD rabbitmq-server-2.8.5.ebuild 2585 SHA256 1678685caa3bc48994715ff1eeda5500f628a002f76919ae1e17321efcf8136a SHA512 ba415a7283ada03fae721872608e4164f4d3d98a2cef71345a65f94fe0522ace69df4821da052f2b9956c733589314b09c85a6c8af9a464722c9421f15f64972 WHIRLPOOL 4fcff28e6d1af666b663273edb4928e2a07c84f83cc75ff7386e2ad7b3b9c021ef31093d3923dc9340f0288c708b8fe4f48d1e1bf1d9443c0fdee708c7e2494f
 EBUILD rabbitmq-server-2.8.6.ebuild 2585 SHA256 ac2c895a886fc05ad2e1c29af04190ccb0b94e30e3e900fac1f365074eb4ae61 SHA512 fce7b3b3f53c2fee481a02f4bfd97383217dfa4fce7d542c6f1a8272fe4cb2a028ebbd0261a4247639f59a2451ec50d9b03511531cb777f5a03a9de2a7803446 WHIRLPOOL 4665da1ff0f80384f4b385f86c150a4fc504dc299f2720a02dc03d04d524678bdade5f5fe28b36f97f1feb875903c5acbeb1c6c27f5b9091ab416f580428211b
 EBUILD rabbitmq-server-2.8.7.ebuild 2432 SHA256 bc2e8dea466042fe2887fd15d1f107a97077c992bab14c3a754b0e7ca97176f5 SHA512 2a8c48724f34fb0917a71ee681b2a344731d6e971efc31d348f7fff53b518dfef8ab286e0400b71ec5f1f61e58831990f471959f66edd6da07383065b2ac14b4 WHIRLPOOL 4aa17dd304bfb314f5e830a74495558b1418533b7ecfeb99962d4eaf036c926f8f816a93bbf7e3da0a9237af39d30d17ef74f571638fb71628eebfb7971ed1da
 EBUILD rabbitmq-server-3.0.1.ebuild 2656 SHA256 479cbe982ade9291e1dec0f3a4a17b35713057db082afc7c4825ad3bccf91e4b SHA512 ecafe6e52e87522c48bc2d829aed2037cb560ceef7f9c97cf902b36157539013d3769dbf30588f7d3fd155043b0535fa2648aed0959f0e7ad102093d77f83313 WHIRLPOOL 2c3f91045c0aefa152e4d6a2b7b06fe2c63b76b35fc213d73ab92a78fb7d87d448fd48fefcb3206c5f883892bbcaab06a3f096df63b12a9aa16c1aba3322467b
 EBUILD rabbitmq-server-3.0.2.ebuild 2656 SHA256 2907847ff3c4eb55b640579e3a728c981dd6b9af22af78e06f95358ea7b98f9c SHA512 0679d37d1d2e72391f8d31ffc630dd27f049929fef5730f962db0ea82d967c21efaaa155e94b1dc50353e615059fc8645bf9059428b0a33933dbbae19cce3fc3 WHIRLPOOL fa6787e6ff300f9ff5508e458a98ffc84e318d3c99ccd882388c3eabcccfcce5f8dd2f962d97983111b3621044940cc103c4e898471c5562e8e600c9a3385c0b
-MISC ChangeLog 1053 SHA256 c401fb45b6165184940ab9bbdc09a5cefae26118d6f008d85839ea4e53d9443d SHA512 a4c4639e42f02db149d638102e44f263764b2b415e814bff9035dc04eddddeeb11b93e25a7d3086035c8adce3b77f62b27b8ebaae42a07142238b9e9d8e0857b WHIRLPOOL c8f6bec1fccdb0e66ad803e77ae64fdd18d5b47ced060e247916dac798784bc6d3df8ae0b0bc58b75d36188c19b868a5479e85f77c4fbbfc987aba9e0b8e26af
+EBUILD rabbitmq-server-3.0.4.ebuild 2656 SHA256 c72a1b61d5c7581d908f1dc53f0fdde09d1251cd3ef3365da1ba32b58ced2814 SHA512 7cd6b673dffa451c6ce1939e7044d122d2d2f5195bc0e3bdfecc73eba7e6e5445cd0912f382b6d46efa75bcb6bcec0281afc799430aaee65c24f5a58dc92f5a4 WHIRLPOOL e3e9b130d77de2a63a0526ca89bac7dc781cc158c28e776e0e9842a62db62944896a582078337f1776e47a7f638191c7de9edb2a889c73d7474577f803e4e3a1
+MISC ChangeLog 1184 SHA256 ed43f03781be3ba5addbbab6a3d04f966704303b910c21324135fe15f0f53ca5 SHA512 a9692365c85391bd69d14f0d77e6cb4f3c2bbe2498a61ce33c0c1a43e8af98b085d499f89f8932c65ec46e79ff8eb3cf1440d199bf591aac0297df7cde461cb2 WHIRLPOOL dff0aaf7774aaf826b2eb43c113013d735f6fcadec00523b152cd6b563723a40130eaa536044acd9a7b0dbb05d82334de5001d1705ea41e7fc4003bf7645a85d
 MISC metadata.xml 230 SHA256 bd8560ab21232bace10a233ea24414dacb36c87e37a3a10cdeeded266cbb5c8d SHA512 3c7c9badebcc814572f1be89f2cdffaa81f795e3a44ae4f67bc7332927d332844a8a076b0f34d0e84b31db5abef654001cf1e6efff9628fa56a06786c082e6c0 WHIRLPOOL 57f9c4a65d7791075c8859af3cbbff141cc74e426102fefd15029bf1c63d3cf8a2c496eb4fc4f59570d0b84151a0d7a0feba0599827e932702ecfd5b8598563d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlEaXTAACgkQKiQSS7ZY+hPzYQD/b+IkoyKMvC4oW17t7QdeOx+t
-+3MKgDII1NUI8CM0opAA/Ru9nkxv5sACk0ViA210jKy3I2PhpTf2z3QupvQpzluI
-=9MwW
+iF4EAREIAAYFAlFDT4UACgkQKiQSS7ZY+hMZcgD9FyWQc9rxRBlGisG/kyPHSmM6
+ujuufuKiPodIpFXabesBAKAHjafmesF2jv9wIO0lCairPkI6rbuw2wYatxiPbBOl
+=11Cv
 -----END PGP SIGNATURE-----
