@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/rabbitmq-server
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rabbitmq-server/ChangeLog,v 1.25 2013/02/12 15:18:02 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rabbitmq-server/ChangeLog,v 1.26 2013/03/15 16:42:39 ultrabug Exp $
+
+*rabbitmq-server-3.0.4 (15 Mar 2013)
+
+  15 Mar 2013; Ultrabug <ultrabug@gentoo.org> +rabbitmq-server-3.0.4.ebuild:
+  version bump
 
 *rabbitmq-server-3.0.2 (12 Feb 2013)
 
