@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/geoip
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.169 2013/03/15 13:25:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.170 2013/03/15 16:47:15 jer Exp $
+
+  15 Mar 2013; Jeroen Roovers <jer@gentoo.org> -geoip-1.4.8-r2.ebuild:
+  Old.
 
   15 Mar 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r3.ebuild:
   Stable for sh, wrt bug #461094
